@@ -1,3 +1,14 @@
+2006-12-10  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/CHMfactor.c (CHMfactor_to_sparse): change LDL factorization
+	to LL before converting to a sparse matrix. (The LDL form can be
+	converted to a sparse matrix but it is implicitly a unit
+	triangular matrix and a diagonal matrix overwritten on the diagonal.)
+
+2006-12-09  Douglas Bates  <bates@stat.wisc.edu>
+
+	* src/chm_common.c (chm_factor_to_SEXP): allocate and fill the Dim slot.
+
 2006-12-08  Douglas Bates  <bates@stat.wisc.edu>
 
 	* DESCRIPTION (Version): updated -> release 0.9975-7
